Fixed some layout issues

--- a/app/assets/stylesheets/develop.css.scss
+++ b/app/assets/stylesheets/develop.css.scss
@@ -1,3 +1,6 @@
+body{
+  padding:  40px;
+}
 label {
   display: inline;
   margin-bottom: 5px;
@@ -25,4 +28,8 @@ a {
 
 .inline-form{
   display: inline;
+}
+
+.main{
+
 }
